--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <div class="container-score">
                 <div class="container-headline-button">
                     <h2>Recent scores</h2>
-                    <button class="btn btn-refresh">Refresh</button>
+                    <button type="button" class="btn btn-refresh">Refresh</button>
                 </div>
                 <div class="list-scores"></div>
             </div>
