--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <input type="number" name="score" id="score" placeholder="Your score" required>
                 <button class="btn add-btn" type="submit">Submit</button>
             </form>
-            
+            <span></span>
         </section>
     </main>
 </body>
